jdk 17 -> 21, add-opens for java.lang and java.util gradle 8.0 -> 8.6 http4k kotlin 1.9.0-> 1.9.21, swapped jetty->netty